01_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo
  labels:
    app: hello-demo
spec:
  containers:
    - name: hello-demo
      image: hello-py:v1
      ports:
        - containerPort: 80
