02_pod_copy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo2
  labels:
    app: hello-demo
spec:
  containers:
  - name: hello-demo
    image: hello-py:v1
    ports:
      - containerPort: 80
