03_pod_different_port.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo
  labels:
    app: hello-demo
spec:
  containers:
    - name: hello-demo
      image: hello-py:v1
      ports:
        - containerPort: 8000
