04_pod_different_image.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo
  labels:
    app: hello-demo
spec:
  containers:
    - name: hello-demo
      image: hello-py:v2
      ports:
        - containerPort: 80
