08_deployment_v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: hello-deployment
spec:
   replicas: 10
   selector:
      matchLabels:
         app: hello-demo
   template:
      metadata:
         labels:
            app: hello-demo
      spec:
         containers:
            - name: hello-py
              image: hello-py:v2
              ports:
                 - name: web
                   containerPort: 80
