10_deployment_rolling_update_with_tunes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: hello-deployment
spec:
   replicas: 10
   selector:
      matchLabels:
         app: hello-demo
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 1 # how many pods we can add at a time
         maxUnavailable: 0 # maxUnavailable define how many pods can be unavailable during the rolling update
   template:
      metadata:
         labels:
            app: hello-demo
      spec:
         containers:
            - name: hello-py
              image: hello-py:v1
              ports:
                 - name: web
                   containerPort: 80
