24_Daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hello-daemonset
spec:
  selector:
    matchLabels:
      app: hello-demo
  template:
    metadata:
      labels:
        app: hello-demo
    spec:
      containers:
        - name: hello-py
          image: hello-py:v1
          ports:
            - name: web
              containerPort: 80
