11_service_clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
