15_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/server-snippets: |
      location /admin {
        deny all;
        return 403 "Go your own way, Stalker!";
      }
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 80
